// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling
     
    $2.35
  </h1>
</div>
`;

exports[`should correctly render ExpensesSummary with mulitple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling
     
    $1,323,243,432.23
  </h1>
</div>
`;
